# linea_canonical_handles

./: .gitignore  foundry.toml
js_playground/: index.js  package-lock.json  package.json
rust_playground/: Cargo.toml
rust_playground/src/: main.rs
src/: Canonicalization.sol  Diatrical.sol  HandlesValidator.sol  SuffixGenerator.sol  validations.sh
